@startuml

title __VACATION's Class Diagram__\n

  package  {
    package Model {
      package Model.Vacation {
        class Vacation {
            - vacationKey : StringProperty
            - sellerKey : StringProperty
            - origin : StringProperty
            - destination : StringProperty
            - visible : boolean
            - timeStamp : int
            - price : double
            - departureDate : int
            - isExchangeable : boolean
            + Vacation()
            + Vacation()
            + getVacationKey()
            + setVacationKey()
            + getSellerKey()
            + setSellerKey()
            + getOrigin()
            + setOrigin()
            + getDestination()
            + setDestination()
            + vacationKeyProperty()
            + sellerKeyProperty()
            + originProperty()
            + destinationProperty()
            + isVisible()
            + setVisible()
            + setVisible()
            + getTimeStamp()
            + setTimeStamp()
            + getPrice()
            + setPrice()
            + isExchangeable()
            + setExchangeable()
            + setExchangeable()
            + getDepartureDate()
            + setDepartureDate()
            + toString()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.Vacation {
        class VacationExchange {
            - v1 : int
            - v2 : int
            + VacationExchange()
            + VacationExchange()
            + getV1()
            + setV1()
            + getV2()
            + setV2()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.Vacation {
        class VacationModel {
            - getCurrentTimeStamp()
            + VacationModel()
            + insertVacationToTable()
            + updateTable()
            + getUserName()
            + readDataFromDB()
            + insertVacationExchange()
        }
      }
    }
  }
  

  VacationModel -up-|> ACRUDModel
  VacationModel o-- VacationExchangeTable : vacationExchangeTable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
